<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World</string>
    <string name="app_name">MakeItHappen</string>
    <string name="goal_add_activity">Add a goal</string>
    <string name="goal_edit_activity">Edit a goal</string>
    <string name="goal_list_activity">Goal list</string>
    <string name="stage_add_activity">Add a stage</string>
    <string name="stage_list_activity">Stage list</string>
    <string name="todo_list_activity">TODO list</string>
    <string name="stage_edit_activity">Edit a stage</string>
    <string name="task_add_activity">Add a task</string>
    <string name="task_list_activity">Task list</string>
    <string name="task_edit_activity">Edit a task</string>
    <string name="prize_add_activity">Add a prize</string>
    <string name="prize_list_activity">Prize list</string>
    <string name="prize_edit_activity">Edit a prize</string>
    <string name="set_alarm">Set alarm</string>
 	<string name="start_alarm">Start</string>
 	<string name="prize_name">Prize Name</string>
 	<string name="prize_content">Prize Content</string>
 	<string name="prize_type">Prize Type</string>
 	<string name="available_count">Count</string>
 	<string name="prize_rate">Prize Rate</string>
 	<string name="prize_rate_nomal">Nomal</string>
 	<string name="prize_rate_great">Great</string>
 	<string name="prize_rate_superb">Superb</string>
 	<string name="target_name">Target Name</string>
 	<string name="target_content">Target Content</string>
 	<string name="save_content">Save</string>
 	<string name="done_edit">Done</string>
 	<string name="done_add">ADD</string>
 	<string name="break_it_down">Break It Down</string>
 	<string name="next_stage">Next</string>
 	<string name="start_at">Start At:</string>
 	<string name="end_at">End At:</string>
 	<string name="about_use">About Use:</string>
 	<string name="delay_task">Delay</string>
 	<string name="extend_task">Extend</string>
 	<string name="complete_task">Complete</string>
 	<string name="haveCompleted_task">Have Completed</string>
 	<string name="startNow_task">Start Now</string>
 	<string name="start_task">Start</string>
 	<string name="dismiss_task">Dismiss</string>
 	<string name="stage_name">Stage Name</string>
 	<string name="stage_content">Stage Content</string>
 	<string name="task_name">Task Name</string>
 	<string name="task_type">Task Type</string>
 	<string name="task_content">Task Content</string>
 	<string name="deadline">  Deadline </string>
 	<string name="start_time">Start  Time</string>
 	<string name="stage_value">Stage Value</string>
 	<string name="target_value">Target Value</string>
 	<string name="alarm_time">Alarm Time</string>
 	<string name="invest_time">Invest Time</string>
 	<string name="quantifiable">Quantifiable</string>
 	<string name="str_yes">YES</string>
 	<string name="str_no">No</string>
 	<string name="str_not_release">Sorry, This function is on the way!</string>
 	<string name="smart_word">A goal is a dream with a deadline.   - Napoleon Hill</string>
 	<string name="str_fiftyMinute">15m</string>
 	<string name="str_thirtyMinute">30m</string>
 	<string name="str_sixtyMinute">1h</string>
 	<string name="str_auto">Auto</string>
 	<string name="str_hitme">HitMe</string>
 	<string name="str_routine">Routine</string>
 	<string name="str_allday">AllDay</string>
 	<string name="str_arrage">Arrage</string>
 	<string name="menu_setting">Setting</string>
 	<string name="setting_goalListView">goalListView</string>
 	<string name="setting_alertMusic">alertMusic</string>
 	<string-array name="tab_title">
 	    <item>Goal</item>
        <item>TODO</item>
        <item>Game</item>
        <item>Friends</item>
        <item>Review</item>
 	</string-array>
 	<string-array name="setting_alertMusic_key">
 	    <item>Default</item>
        <item>Vibrator and music</item>
        <item>Vibrator only</item>
        <item>Silence</item>
 	</string-array>
 	<string-array name="setting_alertMusic_value">
 	    <item>MUSIC</item>
        <item>BOTH</item>
        <item>VIBRATOR</item>
        <item>SILENCE</item>
 	</string-array>
 	<string-array name="setting_goalListView_key">
 	    <item>Whole</item>
        <item>Month</item>
        <item>Week</item>
 	</string-array>
 	<string-array name="setting_goalListView_value">
 	    <item>WHOLE</item>
        <item>MONTH</item>
        <item>WEEK</item>
 	</string-array>
 	
</resources>