<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:stretchColumns="2">

   <TableRow> 
    	<TextView
	        android:id="@+id/tv_stageId"
			android:visibility="invisible"
	        android:layout_width="0dip"
	        android:layout_height="0dip" />
    	 <TextView
	        android:layout_column="1"
	        android:id="@+id/tv_stageName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stage_name" />
    	 <EditText
	        android:layout_column="2"
	        android:id="@+id/et_stageName"
	        style="@style/et_dark"
	        android:layout_marginLeft="5dip"
	        android:shadowRadius="3.0"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" >
	        </EditText>
	</TableRow>
    
    <TableRow> 
	    <TextView
	        android:layout_column="1"
	        android:id="@+id/tv_taskName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_name" />
	
	    <EditText
	        android:layout_column="2"
	        android:id="@+id/et_Name"
	        style="@style/et_dark"
	        android:layout_marginLeft="5dip"
	        android:shadowRadius="3.0"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" >
	    </EditText>
	</TableRow>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	    <TextView
	        android:id="@+id/tv_taskContent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_content" />
	
	    <EditText
	        android:id="@+id/et_Content"
	        style="@style/et_dark"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dip"
	        android:ems="10"
	        android:inputType="text|textMultiLine"
	        android:shadowRadius="3.0" 
	        android:text="@string/smart_word">
	    </EditText>
	</LinearLayout>
	
    <TableRow> 
		<TextView
	        android:layout_column="1"
	        android:id="@+id/tv_taskType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_type" />
	    <LinearLayout
	        android:layout_column="2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		<CheckBox
		    android:id="@+id/cb_allday"
		    android:checked="true"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_allday" />
		<CheckBox
		    android:id="@+id/cb_routine"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_routine" />
		<CheckBox
		    android:id="@+id/cb_auto"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_auto" />
		</LinearLayout>
	</TableRow>
    
    <TableRow android:id="@+id/tr_startTime"> 
	    <TextView
	        android:layout_column="1"
	        android:id="@+id/tv_startTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/start_time" />
		    
		<EditText
	        android:layout_column="2"
	        android:id="@+id/et_startTime"
	        style="@style/et_dark"
	        android:layout_marginLeft="5dip"
	        android:shadowRadius="3.0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" >
		</EditText>
	</TableRow>
	
    <TableRow android:id="@+id/tr_alarmTime"> 
		    <TextView
	        android:layout_column="1"
	        android:id="@+id/tv_alarmTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/alarm_time" />
		    
		    <EditText
	        android:layout_column="2"
	        android:id="@+id/et_alarmTime"
	        style="@style/et_dark"
	        android:layout_marginLeft="5dip"
	        android:shadowRadius="3.0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" >
	    </EditText>
	</TableRow>
	
	<TableRow android:id="@+id/tr_investTime"> 
	    <TextView
	        android:layout_column="1"
	        android:id="@+id/tv_spendTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/invest_time" />
	    <LinearLayout
	        android:layout_column="2"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		<EditText
		        android:id="@+id/et_investTime"
		        style="@style/et_dark"
		        android:layout_marginLeft="2dip"
		        android:shadowRadius="3.0"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/str_fiftyMinute"
		        android:ems="3"
		        android:inputType="text" >
			</EditText>
		<RadioGroup
	    android:id="@+id/rg_investTime"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
			<RadioButton
			     android:id="@+id/rb_fiftyMinute"
			     android:checked="true"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:text="@string/str_fiftyMinute"/>
			<RadioButton
			     android:id="@+id/rb_thirtyMinute"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:text="@string/str_thirtyMinute"/>
			<RadioButton
			     android:id="@+id/rb_sixtyMinute"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:text="@string/str_sixtyMinute"/>
   		</RadioGroup>
   		</LinearLayout>
	</TableRow>
	<Button
	    android:id="@+id/btn_done"
		style="@style/btn_dark"
	    android:layout_gravity="center"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/done_edit" />

</TableLayout>