<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">"
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <TextView android:id="@+id/dataView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/hello" />
	    <EditText android:id="@+id/edit_hour"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="" />
		<EditText android:id="@+id/edit_minute"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="" />
		<Button android:id="@+id/set_alarm"
			style="@style/btn_dark"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/set_alarm" />
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
      	
	    <EditText android:id="@+id/edit_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="" />
		<Button android:id="@+id/start_alarm"
			style="@style/btn_dark"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/start_alarm" />
    </LinearLayout>
</LinearLayout>