<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/tv_taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
	    android:textColor="#000000"
		android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_taskContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
	    android:textColor="#000000"
        android:layout_below="@+id/tv_taskName"
		android:layout_marginLeft="15dip"
		android:layout_centerHorizontal="true"/>
    <View 
        android:id="@+id/cutLine"
        android:layout_height="2dip" 
        android:layout_width="match_parent" 
        android:layout_below="@+id/tv_taskContent" 
        android:background="#a1a3a6" /> 
	<TableLayout
        android:id="@+id/tl_timeTable" 
        android:layout_below="@+id/cutLine"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="2">
    	
		<TableRow> 
		    <TextView
		        android:layout_column="1"
		        android:id="@+id/tv_endAt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
			    android:textColor="#000000"
			    android:text="@string/start_at"
				android:layout_marginLeft="25dip"/>
		    <TextView
		        android:layout_column="2"
		        android:id="@+id/tv_taskStartTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
			    android:textColor="#000000"
				android:layout_marginLeft="10dip"/>
		</TableRow>
		<TableRow> 
		    <TextView
		        android:layout_column="1"
		        android:id="@+id/tv_aboutUse"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
			    android:textColor="#000000"
			    android:text="@string/about_use"
				android:layout_marginLeft="25dip"/>
		    <TextView
		        android:layout_column="2"
		        android:id="@+id/tv_taskSpendTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
			    android:textColor="#000000"
				android:layout_marginLeft="10dip"/>
		</TableRow> 
	</TableLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_below="@+id/tl_timeTable"
	    android:orientation="horizontal" >
	    <Button
		    android:id="@+id/btn_startNow"
			style="@style/btn_dark"
			android:layout_marginLeft="5dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/startNow_task" />
		<Button
		    android:id="@+id/btn_haveCompleted"
			style="@style/btn_dark"
			android:layout_marginLeft="5dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/btn_startNow"
		    android:text="@string/haveCompleted_task" />
		<Button
		    android:id="@+id/btn_dismiss"
			style="@style/btn_dark"
			android:layout_marginLeft="5dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/btn_haveCompleted"
		    android:text="@string/dismiss_task" />
	</RelativeLayout>
</RelativeLayout>